--- a/src/Components/About.css
+++ b/src/Components/About.css
@@ -17,6 +17,7 @@
     /* border: 2px solid red; */
     width: fit-content;
     margin-left: 70px;
+    background-color:red;
 }
 
 /* .portfolio-img{
