--- a/src/Components/About.css
+++ b/src/Components/About.css
@@ -8,7 +8,8 @@
     width: 350px;
     border-radius: 50%;
     border: 8px solid #533eba;
-    background-color: red;
+    /* background-color: #533eba; */
+    /* background-color: red; */
     /* border: 8px solid #5034dd; */
 }
 
@@ -19,7 +20,7 @@
     border: 8px solid #5034dd;
     margin: 0 auto;
     margin-top: 20px;
-    background-color: #533eba;
+    /* background-color: #533eba; */
     /* background: url('images/portfo.jpeg'); */
     overflow: hidden;   
 }
